--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+0
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_naver_map: ^1.0.2
+  flutter_svg: ^2.0.9
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +55,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/images/logo.svg
+    - assets/images/search.svg
+    - assets/images/like.svg
+    - assets/images/splash.png
+    - assets/images/home.svg
+    - assets/images/location.svg
+    - assets/images/chat.svg
+    - assets/images/setting.svg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
