--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^10.1.0
   permission_handler: ^11.0.1
   provider: ^6.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
