--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   permission_handler: ^11.0.1
   provider: ^6.1.1
   intl: ^0.18.1
+  firebase_messaging: ^14.7.6
+  firebase_core: ^2.24.0
+  flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -75,6 +79,8 @@ flutter:
     - assets/images/active_location.svg
     - assets/images/active_setting.svg
     - assets/images/back.svg
+    - android/app/src/main/res/mipmap/icon.png
+    - ios/Runner/Assets.xcassets/AppIcon.appiconset/icon.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
